kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quotrading
  labels:
    name: quotrading
    environment: production
